# BookStore

./: README.md  heroku.yml  pyproject.toml
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
BookStoreProject/: Dockerfile  docker-compose.yml  env.dev  pyproject.toml
BookStoreProject/book_store/: settings.py  urls.py
BookStoreProject/order/: factories.py
BookStoreProject/order/models/: order.py
BookStoreProject/order/serializers/: order_serializer.py
BookStoreProject/order/tests/test_viewsets/: test_order_viewset.py
BookStoreProject/order/viewsets/: order_viewset.py
BookStoreProject/product/: admin.py  factories.py  urls.py
BookStoreProject/product/models/: product.py
BookStoreProject/product/serializers/: category_serializer.py  product_serializer.py
BookStoreProject/product/tests/: __init__.py
BookStoreProject/product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
BookStoreProject/product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
book_store/: settings.py
order/: admin.py  urls.py
order/migrations/: 0001_initial.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: __init__.py
